--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@ Theme Name: Stichting catent
 Theme URI: https://www.catapult.nl
 Description: Driven by Catapult - Bootstrap 4
 Author: Jurre Hengstman & Hans Nep
-Version: 1.1
+Version: 1.1.2
 Slingshot version: 6.0.0
+GitHub Theme URI: catapultcc/slingshot-catent
 GitHub Theme URI: https://github.com/catapultcc/slingshot-catent
 */ 
 
